chore(style): fix overflow of hero gradient

--- a/src/components/Functionalities/Functionalities.module.css
+++ b/src/components/Functionalities/Functionalities.module.css
@@ -66,5 +66,6 @@
 
   .list {
     grid-template-columns: minmax(0, 1fr);
+    grid-auto-rows: unset;
   }
 }
