--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -62,6 +62,11 @@
     width: 100%;
     margin: 0;
     padding: 4rem 0;
+
+    &::before {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .heroTitle {
